# OpticalPhotonsG4

./: .gitignore  CMakeLists.txt  README.md
include/: CONFIGURATION.hh  DetectorConstruction.hh  EnergyTimeSD.hh  EventAction.hh  Geometry.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh
macro/: init_vis.mac  run.mac  run_mip_balance_check.mac
src/: DetectorConstruction.cc  EnergyTimeSD.cc  EventAction.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  main.cc
